2018 sewer catalog updates

--- a/sewer-tools-nozzles/warthog-descaling-heads.html
+++ b/sewer-tools-nozzles/warthog-descaling-heads.html
@@ -62,6 +62,7 @@ master-slider: yes
       
       <p class="product-description">StoneAge offers optional heads that allow you to change our standard nozzle configuation. Your existing Wartjog jetting tool can easily be converted into a powerful descaling tool by simply changing the head.</p>
       <p>The descaling pattern features two additional jets at 105&deg; combined with a plugged front port to ensure maximum power. The result is enhanced removal of scale, tuberculation, corrosion products, soap and minerals.</p>
+      <p><strong>TECH TIP:</strong> We recommend plugging the front jets to help maximize descaling and pulling power when using this option.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
