--- a/sewer-tools-nozzles/warthog-wd.html
+++ b/sewer-tools-nozzles/warthog-wd.html
@@ -59,7 +59,7 @@ master-slider: yes
         <li><strong>Controlled rotation</strong> — Slower dwell time allows jets to penetrate deeper through deposits</li>
         <li><strong>Multiple head options</strong> — Customize tool for unplugging, descaling or manhole cleaning</li>
         <li><strong>Highest quality jets</strong> — Hardened stainless steel orifices resist cracking and scratching</li>
-        <li>Optional descaling head available</li>
+        <li>Optional <a href="/warthog-descalers">descaling head</a> available</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -198,7 +198,7 @@ master-slider: yes
                           <ul>
                             <li>1 x <strong>BJ 048-F</strong> Viscous Fluid, 6oz.</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>GP 025-P2</strong> Hex Socket Plug</li>
+                            <li>1 x <strong>GP 025-P2SS</strong> Hex Socket Plug</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
@@ -225,7 +225,7 @@ master-slider: yes
                         <div class="col-sm-6">
                           <ul>
                             <li>1 x <strong>BJ 211</strong> Brass Seat</li>
-                            <li>1 x <strong>BJ 212-O</strong> HP Seal &amp; O-Ring</li>
+                            <li>1 x <strong>BJ 012-O</strong> HP Seal &amp; O-Ring</li>
                           </ul>
                         </div>
                       </div>
@@ -249,7 +249,7 @@ master-slider: yes
                             <li>2 x <strong>BJ 010-D</strong> Shaft Seal</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
                             <li>1 x <strong>BJ 211</strong> Brass Seat</li>
-                            <li>1 x <strong>BJ 212-O</strong> HP Seal &amp; O-Ring</li>
+                            <li>1 x <strong>BJ 012-O</strong> HP Seal &amp; O-Ring</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
@@ -306,6 +306,10 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/wgr-magnum-125"><img class="img-responsive" src="/assets/img/product/thumb-wgr-125-02.jpg" alt="WGR Magnum sewer jetting">
+        <h5>WGR-1-1/4 Magnum</h5></a>
+      </div>
       <div class="item">
         <a href="/wgr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-switcher-02.jpg" alt="WGR Swircher sewer jetting">
         <h5>WGR Switcher</h5></a>
