--- a/sewer-tools-nozzles/warthog-wgp.html
+++ b/sewer-tools-nozzles/warthog-wgp.html
@@ -99,7 +99,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
-                  <td>8-18 in.</td>
+                  <td>8-36 in.</td>
                   <td><span class="metric">203-457 mm</span
                 ></tr>
                 <tr>
@@ -285,7 +285,7 @@ master-slider: yes
                             <li>2 x <strong>WG 007</strong> Ball Bearing</li>
                             <li>1 x <strong>WG 008</strong> O-Ring</li>
                             <li>1 x <strong>WG 014</strong> Wave Spring</li>
-                            <li>1 x <strong>WD 021</strong> Seal</li>
+                            <li>1 x <strong>WD 021-S</strong> Seal</li>
                             <li>1 x <strong>WGP 032</strong> Retaining Ring</li>
                           </ul>
                         </div>
@@ -342,6 +342,10 @@ master-slider: yes
       <div class="item">
         <a href="/wgr-magnum"><img class="img-responsive" src="/assets/img/product/thumb-wgr-02.jpg" alt="Warthog WGR Magnum sewer jetting">
         <h5>WGR Magnum</h5></a>
+      </div>
+      <div class="item">
+        <a href="/wgr-magnum-125"><img class="img-responsive" src="/assets/img/product/thumb-wgr-125-02.jpg" alt="WGR Magnum sewer jetting">
+        <h5>WGR-1-1/4 Magnum</h5></a>
       </div>
       <div class="item">
         <a href="/wg"><img class="img-responsive" src="/assets/img/product/thumb-wg-02.jpg" alt="Warthog WG sewer jetting">
