--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -109,7 +109,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">WGR-1, WGR-1-1/4</td>
+                  <td colspan="2">WGR-1</td>
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
@@ -132,16 +132,18 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Rotation Speed</th>
-                  <td colspan="2">150-400 rpm</td>
+                  <td colspan="2">150-300 rpm</td>
                 </tr>
+<!--
                 <tr>
                   <th>Pulling Force</th>
                   <td>30-90 lb</td>
                   <td><span class="metric">13-41 kg</span></td>
                 </tr>
+-->
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">1 NPT or BSPP,<br>1 1/4 NPT or BSPP</td>
+                  <td colspan="2">1 NPT or BSPP</td>
                 </tr>
                 <tr>
                   <th>Nozzle Ports</th>
@@ -405,6 +407,10 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/wgr-magnum-125"><img class="img-responsive" src="/assets/img/product/thumb-wgr-125-02.jpg" alt="WGR Magnum sewer jetting">
+        <h5>WGR-1-1/4 Magnum</h5></a>
+      </div>
       <div class="item">
         <a href="/wgr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-switcher-02.jpg" alt="WGR Swircher sewer jetting">
         <h5>WGR Switcher</h5></a>
