--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -65,10 +65,10 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Save water and time by eliminating the extra runs needed to swap nozzles</li>
+        <li>Eliminates extra runs needed to swap nozzles &mdash; saving water and time</li>
         <li>Run more jobs with one tank of water</li>
-        <li>Switch to pulling jets for maximum thrust</li>
-        <li>Switch to cleaning jets maximize power for clearing debris and cutting roots</li>
+        <li>Switch to pulling jets for maximum thrust &mdash; Excellent for longer runs, climbing hills, going against the flow and flushing large amounts of material</li>
+        <li>Switch to cleaning jets to maximize power for cutting roots and clearing debris, all without affecting residential infrastructure</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -121,14 +121,20 @@ master-slider: yes
                   <td><span class="metric">190-300 l/min</span></td>
                 </tr>
                 <tr>
-                  <th>Inlet Connection</th>
-                  <td colspan="2">1 NPT or BSPP,<br>1 1/4 NPT or BSPP</td>
+                  <th>Rotation Speed</th>
+                  <td colspan="2">150-300 rpm</td>
                 </tr>
+                <tr>
+                  <th>Inlet Connection</th>
+                  <td colspan="2">1 NPT or BSPP</td>
+                </tr>
+<!--
                 <tr>
                   <th>Nozzle Ports</th>
                   <td colspan="2">Cleaning: 2 x 100&deg;, 2 x 125&deg;<br>
                   Flushing: 4 x 155&deg;</td>
                 </tr>
+-->
                 <tr>
                   <th>Diameter</th>
                   <td>4.5 in.</td>
@@ -390,6 +396,10 @@ master-slider: yes
       <div class="item">
         <a href="/whr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-switcher-05.jpg" alt="Warthog WHR Switcher sewer jetting">
         <h5>WHR Switcher</h5></a>
+      </div>
+      <div class="item">
+        <a href="/whr-hybrid-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-hybrid-switcher-03.jpg" alt="Warthog WHR Hybrid Switcher sewer jetting">
+        <h5>WHR Hybrid Switcher</h5></a>
       </div>
       <div class="item">
         <a href="/wgr-magnum"><img class="img-responsive" src="/assets/img/product/thumb-wgr-02.jpg" alt="Warthog WGR Magnum sewer jetting">
