--- a/sewer-tools-nozzles/warthog-wh.html
+++ b/sewer-tools-nozzles/warthog-wh.html
@@ -57,8 +57,8 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Warthog WH-1/2 and the WH-3/4 are the same tool offered with different inlet ports, either 1/2” or 3/4” NPT or BSPP. These tools are most commonly used with small capacity combination trucks and large trailer jetters. Descaling Heads are available for both models.</p>
-      <p>Optional descaling heads available.</p>
+      <p class="product-description">The WH-1/2 and the WH-3/4 are the same tool offered with different inlet ports, either 3/4” NPT or BSPP. The WH models are best for 6-18” (152-457 mm) lines. These tools are most commonly used with small capacity combination trucks and large trailer jetters.</p>
+      <p>Descaling Heads are available for both models.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -353,6 +353,14 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/whr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-switcher-05.jpg" alt="Warthog WHR Switcher sewer jetting">
+        <h5>WHR Switcher</h5></a>
+      </div>
+      <div class="item">
+        <a href="/whr-hybrid-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-hybrid-switcher-03.jpg" alt="Warthog WHR Hybrid Switcher sewer jetting">
+        <h5>WHR Hybrid Switcher</h5></a>
+      </div>
       <div class="item">
         <a href="/wgr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-switcher-02.jpg" alt="WGR Swircher sewer jetting">
         <h5>WGR Switcher</h5></a>
