--- a/sewer-tools-nozzles/warthog-whp.html
+++ b/sewer-tools-nozzles/warthog-whp.html
@@ -28,13 +28,13 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/whp-01.jpg" alt="Warthog WHP puller sewer cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-whp-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/whp-01.jpg" alt="Warthog WHP puller sewer cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-whp-01.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/LOzn4CvVwvw"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/whp-02.jpg" alt="Warthog WHP puller sewer cleaning">
-            <img class="ms-thumb" src="../assets/img/product/thumb-whp-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/whp-02.jpg" alt="Warthog WHP puller sewer cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-whp-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -103,8 +103,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
-                  <td>1500–8k psi</td>
-                  <td><span class="metric">100–550 bar</span>
+                  <td>1500–4k psi</td>
+                  <td><span class="metric">100–275 bar</span>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
@@ -113,7 +113,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
-                  <td colspan="2">2.6 Cv</td>
+                  <td colspan="2">3.0 Cv</td>
                 </tr>
                 <tr>
                   <th>Rotation Speed</th>
@@ -126,7 +126,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">3/4 NPT or BSPP</td>
+                  <td colspan="2">1/2 NPT or BSPP, 3/4 NPT or BSPP</td>
                 </tr>
                 <tr>
                   <th>Nozzle Ports</th>
@@ -140,7 +140,7 @@ master-slider: yes
                 <tr>
                   <th>Length</th>
                   <td>7.5 in.</td>
-                  <td><span class="metric">191 mm</span></td>
+                  <td><span class="metric">190 mm</span></td>
                 </tr>
                 <tr>
                   <th>Weight</th>
@@ -235,7 +235,7 @@ master-slider: yes
                           <ul>
                             <li>1 x <strong>BJ 048-F</strong> Viscous Fluid, 6oz.</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>GP 025-P2</strong> Hex Socket Plug</li>
+                            <li>1 x <strong>GP 025-P2SS</strong> Hex Socket Plug</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
@@ -295,6 +295,7 @@ master-slider: yes
                             <li>2 x <strong>WH 010</strong> Shaft Seal</li>
                             <li>1 x <strong>RJ 021-S</strong> Weep Seal</li>
                             <li>1 x <strong>RJ 014</strong> Wave Spring</li>
+                            <li>1 x <strong>WHP 032</strong> Retaining Ring</li>
                           </ul>
                         </div>
                       </div>
@@ -343,6 +344,14 @@ master-slider: yes
   </div>
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
+      <div class="item">
+        <a href="/whr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-switcher-05.jpg" alt="Warthog WHR Switcher sewer jetting">
+        <h5>WHR Switcher</h5></a>
+      </div>
+      <div class="item">
+        <a href="/whr-hybrid-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-hybrid-switcher-03.jpg" alt="Warthog WHR Hybrid Switcher sewer jetting">
+        <h5>WHR Hybrid Switcher</h5></a>
+      </div>
       <div class="item">
         <a href="/wgr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-switcher-02.jpg" alt="WGR Swircher sewer jetting">
         <h5>WGR Switcher</h5></a>
@@ -408,7 +417,7 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>We use equipment in the worst environments that you could possibly put them in… Sometimes I can’t see for the life of me how they hold up under these conditions, but they do.</p>
           <p class="signed">-Mike House</p>
         </div>
@@ -419,7 +428,7 @@ master-slider: yes
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
