--- a/sewer-tools-nozzles/warthog-whr-magnum.html
+++ b/sewer-tools-nozzles/warthog-whr-magnum.html
@@ -121,7 +121,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
-                  <td colspan="2">3</td>
+                  <td colspan="2">2.6 Cv</td>
                 </tr>
                 <tr>
                   <th>Rotation Speed</th>
@@ -234,7 +234,7 @@ master-slider: yes
                           <ul>
                             <li>2 x <strong>GSS 625-20-25CU</strong> Set Screw</li>
                             <li>1 x <strong>BJ 048-M</strong> Viscous Fluid, Medium - 6oz</li>
-                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe, Lock Cap</li>
+                            <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>1 x <strong>WHR 009</strong> Bearing</li>
                             <li>1 x <strong>WHR 076</strong> Nut O-Ring</li>
                             <li>2 x <strong>WHR 006</strong> Seal, Shaft</li>
@@ -272,7 +272,7 @@ master-slider: yes
                           <ul>
                             <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 059</strong> HP Nut Seal</li>
-                            <li>2 x <strong>RJ 040-K</strong> O-Ring</li>
+                            <li>2 x <strong>WHR 050</strong> O-Ring</li>
                             <li>2 x <strong>WHR 052</strong> HP Wave Spring</li>
                             <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
@@ -300,7 +300,7 @@ master-slider: yes
                             <li>1 x <strong>WHR 029</strong> Seal, Head</li>
                             <li>1 x <strong>WHR 014</strong> Bearing Wave Spring</li>
                             <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
-                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe</li>
+                            <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 009</strong> Rear Bearing</li>
                             <li>1 x <strong>WHR 076</strong> Weep Seal O-Ring</li>
@@ -380,6 +380,10 @@ master-slider: yes
       <div class="item">
         <a href="/whr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-switcher-05.jpg" alt="Warthog WHR Switcher sewer jetting">
         <h5>WHR Switcher</h5></a>
+      </div>
+      <div class="item">
+        <a href="/whr-hybrid-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-hybrid-switcher-03.jpg" alt="Warthog WHR Hybrid Switcher sewer jetting">
+        <h5>WHR Hybrid Switcher</h5></a>
       </div>
       <div class="item">
         <a href="/wgr-magnum"><img class="img-responsive" src="/assets/img/product/thumb-wgr-02.jpg" alt="Warthog WGR Magnum sewer jetting">
