--- a/sewer-tools-nozzles/warthog-whr-switcher.html
+++ b/sewer-tools-nozzles/warthog-whr-switcher.html
@@ -70,11 +70,10 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Eliminates extra runs needed to swap nozzles, saving water and time</li>
-        <li>Excellent for longer runs, climbing hills, going against the flow and flushing large amounts of material without affecting residential infrastructure</li>
+        <li>Eliminates extra runs needed to swap nozzles &mdash; saving water and time</li>
         <li>Run more jobs with one tank of water</li>
-        <li>Switch to pulling jets for maximum thrust</li>
-        <li>Switch to cleaning jets maximize power for cutting roots annd clearing debris</li>
+        <li>Switch to pulling jets for maximum thrust. Excellent for longer runs, climbing hills, going against the flow and flushing large amounts of material</li>
+        <li>Switch to cleaning jets to maximize power for cutting roots and clearing debris, all with out affecting the houses</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -118,21 +117,30 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
-                  <td>1500–8k psi</td>
-                  <td><span class="metric">100–550 bar</span>
+                  <td>1200–5k psi</td>
+                  <td><span class="metric">83–350 bar</span>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
-                  <td>14-50 gpm</td>
-                  <td><span class="metric">60-190 l/min</span></td>
+                  <td>14-30 gpm</td>
+                  <td><span class="metric">60-114 l/min</span></td>
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
                   <td colspan="2">2.6 Cv</td>
                 </tr>
                 <tr>
+                  <th>Rotation Speed</th>
+                  <td colspan="2">150-400 rpm</td>
+                </tr>
+                <tr>
+                  <th>Pulling Force</th>
+                  <td>30-90 lb</td>
+                  <td><span class="metric">13-41 kg</span></td>
+                </tr>
+                <tr>
                   <th>Inlet Connection</th>
-                  <td colspan="2">3/4 NPT or BSPP</td>
+                  <td colspan="2">1/2 NPT or BSPP, 3/4 NPT or BSPP</td>
                 </tr>
                 <tr>
                   <th>Nozzle Ports</th>
@@ -222,7 +230,7 @@ master-slider: yes
                           <ul>
                             <li>2 x <strong>GSS 625-20-25CU</strong> Set Screw</li>
                             <li>1 x <strong>BJ 048-M</strong> Viscous Fluid, Medium - 6oz</li>
-                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe, Lock Cap</li>
+                            <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>1 x <strong>WHR 009</strong> Bearing</li>
                             <li>1 x <strong>WHR 076</strong> Nut O-Ring</li>
                             <li>2 x <strong>WHR 006</strong> Seal, Shaft</li>
@@ -260,7 +268,7 @@ master-slider: yes
                           <ul>
                             <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 059</strong> HP Nut Seal</li>
-                            <li>2 x <strong>RJ 040-K</strong> O-Ring</li>
+                            <li>2 x <strong>WHR 050</strong> O-Ring</li>
                             <li>2 x <strong>WHR 052</strong> HP Wave Spring</li>
                             <li>2 x <strong>GP 805</strong> Container, Round Hinged Lid</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
@@ -288,7 +296,7 @@ master-slider: yes
                             <li>1 x <strong>WHR 029</strong> Seal, Head</li>
                             <li>1 x <strong>WHR 014</strong> Bearing Wave Spring</li>
                             <li>1 x <strong>WGR 180</strong> Torx L-Wrench</li>
-                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe</li>
+                            <li>1 x <strong>GP 049</strong> Grease Syringe</li>
                             <li>1 x <strong>WHR 058</strong> HP Shaft Seal</li>
                             <li>1 x <strong>WHR 009</strong> Rear Bearing</li>
                             <li>1 x <strong>WHR 076</strong> Weep Seal O-Ring</li>
@@ -366,6 +374,10 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/whr-hybrid-switcher"><img class="img-responsive" src="/assets/img/product/thumb-whr-hybrid-switcher-03.jpg" alt="Warthog WHR Hybrid Switcher sewer jetting">
+        <h5>WHR Hybrid Switcher</h5></a>
+      </div>
+      <div class="item">
         <a href="/whr-magnum"><img class="img-responsive" src="/assets/img/product/thumb-whr-02.jpg" alt="WHR Magnum sewer jetting">
         <h5>WHR Magnum</h5></a>
       </div>
@@ -378,7 +390,7 @@ master-slider: yes
         <h5>WHP 3/4</h5></a>
       </div>
       <div class="item">
-        <a href="/wgr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-wg-01.jpg" alt="Warthog WHR Switcher sewer jetting">
+        <a href="/wgr-switcher"><img class="img-responsive" src="/assets/img/product/thumb-switcher-02.jpg" alt="Warthog WHR Switcher sewer jetting">
         <h5>WGR Switcher</h5></a>
       </div>
       <div class="item">
@@ -407,7 +419,7 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
       <h2>Switch between two sets of jets right inside the pipe</h2>
-      <p>The WGR Switcher does the job of two tools in one — switch between pulling and cleaning mode without changing nozzles.</p>
+      <p>The WHR Switcher does the job of two tools in one &mdash; switch between pulling and cleaning mode without changing nozzles.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
