--- a/sewer-tools-nozzles/warthog-ws.html
+++ b/sewer-tools-nozzles/warthog-ws.html
@@ -61,16 +61,11 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Warthog WS-1/2 is designed to handle 4”-8” lines and is most commonly used with trailer jetters. It is used to clean lines in restaurants, hospitals, multi-story apartment buildings, residential, and other applications. Easily removes grease, cuts roots, ice and soil blockages.</p>
-      <p>Jointed inlet (WS-1/2-J) and rigid inlet (WS-P8) models for limited access applications available.</p>
-      
-      <h2>Features</h2>
-      <ul class="feature-list">
-        <li><strong>Controlled rotation</strong> &mdash; Slower dwell time allows jets to penetrate deeper through deposits</li>
-        <li><strong>Multiple head options</strong> &mdash; Customize tool for unplugging, descaling or manhole cleaning</li>
-        <li><strong>Highest quality jets</strong> &mdash; Hardened stainless steel orifices resist cracking and scratching</li>
-        <li>Optional <a href="/warthog-descalers">descaling head available</a></li>
-      </ul>
+      <p class="product-description">The WS-1/2 is designed to handle 4”-8” (102-204 mm) lines and is most commonly used with trailer jetters. It is used to clean lines in restaurants, hospitals, multi-story apartment buildings, residential, and other applications. Easily removes grease, cuts roots, and clears ice and soil blockages.</p>
+      <h3>Jointed Inlet</h3>
+      <p>The WS-J model allows the inlet hose to bend to the side, shortening the rigid length of the tool and allowing limited access applications to be cleaned much easier.</p>
+      <h3>Optional Rigid Inlets</h3>
+      <p>The WS-p6 and WS-P8 are excellent for straight pipes. The whip hose is removed, allowing the hose to connect directly to the tool</p>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
@@ -104,7 +99,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">WS-1/2, WS-1/2-J, WS-P8</td>
+                  <td colspan="2">WS-1/2, WS-1/2-J, WS-P6, WS-P8</td>
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
@@ -123,7 +118,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Flow Rating</th>
-                  <td colspan="2">0.75 Cv</td>
+                  <td colspan="2">1.3 Cv</td>
                 </tr>
                 <tr>
                   <th>Rotation Speed</th>
@@ -144,8 +139,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Diameter</th>
-                  <td>1.7 in.</td>
-                  <td><span class="metric">44 mm</span></td>
+                  <td>1.9 in.</td>
+                  <td><span class="metric">48 mm</span></td>
                 </tr>
                 <tr>
                   <th>Length</th>
@@ -154,7 +149,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>2.98 lb</td>
+                  <td>2.95 lb</td>
                   <td><span class="metric">1.33 kg</span></td>
                 </tr>
               </tbody>
@@ -286,7 +281,7 @@ master-slider: yes
                         <div class="col-sm-6">
                           <ul>
                             <li>1 x <strong>BJ 026</strong> Port Plug</li>
-                            <li>1 x <strong>BJ 048-F</strong> Viscous Fluid, 6oz.</li>
+                            <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, 6oz.</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
                             <li>1 x <strong>RJ 008</strong> O-Ring</li>
                             <li>1 x <strong>RJ 011</strong> Brass Seat</li>
@@ -319,7 +314,7 @@ master-slider: yes
                         <div class="col-sm-6">
                           <ul>
                             <li>1 x <strong>BJ 026</strong> Port Plug</li>
-                            <li>1 x <strong>BJ 048-F</strong> Viscous Fluid, 6oz.</li>
+                            <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, 6oz.</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
                             <li>1 x <strong>RJ 008</strong> O-Ring</li>
                             <li>1 x <strong>RJ 011</strong> Brass Seat</li>
