--- a/sewer-tools-nozzles/warthog-wt.html
+++ b/sewer-tools-nozzles/warthog-wt.html
@@ -53,14 +53,14 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Our smaller Classic series Warthog models can negotiate elbows and clean-outs commonly found in laterals in homes, buildings, restaurants and other light commercial facilities. This tool is most commonly used on small capacity pumps and cart jetters. Also an excellent choice for cutting roots, clearing ice and removing blockages, the WT-3/8-C is designed specifically to handle 3”-6” lines and clean-outs.</p>
+      <p class="product-description">Our smaller Classic series models can negotiate elbows and clean-outs commonly found in laterals at homes, buildings, restaurants and other light commercial facilities. This tool is most commonly used on small capacity pumps and cart jetters. Also an excellent choice for cutting roots, clearing ice and removing blockages.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li><strong>Controlled rotation</strong> &mdash; Slower dwell time allows jets to penetrate deeper through deposits</li>
-        <li><strong>Multiple head options</strong> &mdash; Customize tool for unplugging, descaling or manhole cleaning</li>
-        <li><strong>Highest quality jets</strong> &mdash; Hardened stainless steel orifices resist cracking and scratching</li>
-        <li>Optional descaling head available</li>
+        <li>Excellent for navigating elbows</li>
+        <li>Cuts roots, clears ice and blockages</li>
+        <li>Carbide buttons extend tool life up to 5 times</li>
+        <li>Replaceable AP2 nozzles</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -284,7 +284,7 @@ master-slider: yes
                         <div class="col-sm-6">
                           <ul>
                             <li>1 x <strong>BJ 026</strong> Port Plug</li>
-                            <li>1 x <strong>BJ 048-F</strong> Viscous Fluid, 6oz.</li>
+                            <li>1 x <strong>BJ 048-S</strong> Viscous Fluid, 6oz.</li>
                             <li>1 x <strong>RJ 011-K</strong> Brass Seat</li>
                             <li>1 x <strong>RJ 012-KTO</strong> HP Seal &amp; O-Ring</li>
                             <li>1 x <strong>WT 006</strong> Seal</li>
