--- a/sewer-tools-nozzles/warthog-wv.html
+++ b/sewer-tools-nozzles/warthog-wv.html
@@ -53,13 +53,14 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The WV-1/4 uses StoneAge’s flow-through technology and features a revolutionary high-speed rotating design with no high pressure seals or bearings to service. It cleans lines as small as 2” with long sweeping elbows. The head design also features permanent, pre-drilled orifices, rather than threaded nozzles.</p>
+      <p class="product-description">The WV-1/4-LK uses StoneAge’s flow-through technology and features a revolutionary high-speed rotating design with no high pressure seals or bearings to service. It cleans lines as small as 2” (51 mm) with long sweeping elbows. The head design also features permanent, pre-drilled orifices rather than threaded nozzles.</p>
+      <p>The tool has a 1/4” NPT pipe thread inlet and can pass hrough long radius elbows in lines 2” (51 mm) and larger if a 1/4” NPT hose fitting is used.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Capable of negotiating elbows in lines as small as 2" (51 mm)</li>
-        <li>Patented maintenance-free design</li>
-        <li>Multiple jetting options</li>
+        <li>Cleans lines as small as 2” (51 mm) I.D.</li>
+        <li>Excellent for navigating elbows</li>
+        <li>No high pressure seals of bearings to service</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -166,7 +167,7 @@ master-slider: yes
                   <td>WV-1/4-B</td>
                   <td>.020 in.<br><span class="metric">.5 mm</span></td>
                   <td>2 x .039 in.<br><span class="metric">1.0 mm</span></td>
-                  <td>5-6 gpm<br><span class="metric">15-23 l/min</span></td>
+                  <td>5-6 gpm<br><span class="metric">19-23 l/min</span></td>
                 </tr>
                 <tr>
                   <td>WV-1/4-C</td>
