--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -306,11 +306,11 @@ permalink: /product-catalogs
   <div class="col-sm-6 padding-left-60">
     <div class="row margin-bottom-30">
       <div class="col-sm-4">
-        <a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_001.pdf" target="_blank" title="2017-18 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2017-18.jpg" class="img-responsive" alt="2017-2018 StoneAge Warthog Sewer Tools Catalog"></a>
+        <a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2017-18 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" alt="2018-19 StoneAge Warthog Sewer Tools Catalog"></a>
       </div>
       <div class="col-sm-8">
-        <h3>2017/18 Sewer Nozzles</h3>
-        <p><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_001.pdf" target="_blank" title="2017 StoneAge Warthog Sewer Tools Catalog">Click here to download the complete 2017/18 Sewer Nozzles Catalog</a> » PDF 3.5 MB</p>
+        <h3>2018/19 Sewer Nozzles</h3>
+        <p><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2018-19 StoneAge Warthog Sewer Tools Catalog">Click here to download the complete 2018/19 Sewer Nozzles Catalog</a> » PDF 9.1 MB</p>
         <p>
           <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" style="width:32px;" /></a> &nbsp;
           <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" style="width:32px;" /></a> &nbsp;
@@ -324,87 +324,87 @@ permalink: /product-catalogs
       <table class="table table-condensed catalog-pages">
         <tr>
           <td>Page 1:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%201.pdf" target="_blank">Front Cover</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_01.pdf" target="_blank">Front Cover</a></td>
         </tr>
         <tr>
           <td>Page 2-3:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%202.pdf" target="_blank">Catalog Contents</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_02.pdf" target="_blank">Catalog Contents</a></td>
         </tr>
         <tr>
           <td>Page 4-5:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%203.pdf" target="_blank">WV-1/4 (2&#8243;-4&#8243; Lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_03.pdf" target="_blank">WV-1/4 (2&#8243;-4&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 6-7:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%204.pdf" target="_blank">WT-3/8-C (3&#8243;-6&#8243; Lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_04.pdf" target="_blank">WT-3/8-C (3&#8243;-6&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 8-9:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%205.pdf" target="_blank">WS-1/2 (4&#8243;-8&#8243; Lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_05.pdf" target="_blank">WS-1/2 (4&#8243;-8&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 10-11:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%206.pdf" target="_blank">WHR Switcher</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_06.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (6&#8243;-18&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 12-13:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%207.pdf" target="_blank">WHR Magnum</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_07.pdf" target="_blank">WHP-3/4 Puller (6&#8243;-18&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 14-15:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%208.pdf" target="_blank">WH-1/2 &amp; WH-3/4 (6&#8243;-18&#8243; Lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_08.pdf" target="_blank">WG-1 (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 16-17:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%209.pdf" target="_blank">WHP-3/4 Classic (6&#8243;-18&#8243; Lines with Elbows)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_09.pdf" target="_blank">WGP-1 Puller (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
         <td>Page 18-19:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2010.pdf" target="_blank">WGR Switcher</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_10.pdf" target="_blank">WD 1-1/4 (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 20-21:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2011.pdf" target="_blank">Switcher Feature</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_11.pdf" target="_blank">WHR Manum (6&#8243;-18&#8243; Lines)</a></td>
         </tr>
         <tr>
         <td>Page 22-23:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2012.pdf" target="_blank">WGR Magnum (8&#8243;-36&#8243; lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_12.pdf" target="_blank">WGR Magnum (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 24-25:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2013.pdf" target="_blank">WG-1 Classic (8&#8243;-36&#8243; Lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_13.pdf" target="_blank">WGR-1-1/4 Magnum (8&#8243;-36&#8243; Lines)</a></td>
         </tr>
         <tr>
           <td>Page 26-27:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2014.pdf" target="_blank">WGP-1 Classic (8&#8243;-36&#8243; Lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_14.pdf" target="_blank">Warthog Switcher</a></td>
         </tr>
         <tr>
         <td>Page 28-29:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2015.pdf" target="_blank">WGR 1-1/4 Magnum (8&#8243;-36&#8243; lines)</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_15.pdf" target="_blank">WHR Switcher (6&#8243;-18&#8243; Lines)</a></td>
         </tr>
         <tr>
         <td>Page 30-31:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2016.pdf" target="_blank">WD 1-1/4 Classic High Flow</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_16.pdf" target="_blank">WHR Hybrid Switcher (6&#8243;-18&#8243; Lines)</a></td>
         </tr>
         <tr>
         <td>Page 32-33:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2017.pdf" target="_blank">Rotary Hydro-X</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_17.pdf" target="_blank">WGR Switcher</a></td>
         </tr>
         <tr>
         <td>Page 34-35:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2018.pdf" target="_blank">Non-Rotary Hydro-X/Centralizers &amp; Manhole Cleaners</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_18.pdf" target="_blank">Hydro-X, Centralizers &amp; Manhole Cleaners</a></td>
         </tr>
         <tr>
         <td>Page 36-37:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2019.pdf" target="_blank">Customer Service/Safety Information</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_19.pdf" target="_blank">Customer Service/Safety Information</a></td>
         </tr>
         <tr>
           <td>Page 38-39:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2020.pdf" target="_blank">StoneAge Staff</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_20.pdf" target="_blank">Terms &amp; Conditions</a></td>
         </tr>
         <tr>
           <td>Page 40:</td>
-          <td><a href="assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_web_%2021.pdf" target="_blank">Back Cover</a></td>
+          <td><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_21.pdf" target="_blank">Back Cover</a></td>
         </tr>
       </table>
     </div>
