--- a/sewer-tools-nozzles/warthog-wg.html
+++ b/sewer-tools-nozzles/warthog-wg.html
@@ -57,7 +57,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Warthog WG-1 is the proven choice for municipal, industrial and commercial drain cleaning applications. Predominately used in large combination trucks with 1” hose, the WG-1 is field-maintainable for low cost of ownership and can be fitted with replaceable AP2 nozzle tips sized to maximize pump efficiency and effectiveness.</p>
+      <p class="product-description">The WG-1 is the proven choice for municipal, industrial and commercial drain cleaning applications. Predominately used in large combination trucks with 1” (25 mm) hose, the WG-1 is field-maintainable for low cost of ownership and can be fitted with replaceable AP2 nozzle tips sized to maximize pump efficiency and effectiveness.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -135,7 +135,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Nozzle Ports</th>
-                  <td colspan="2">5 x 1/8 NPT</td>
+                  <td colspan="2">5 x 1/8 NPT (P2)</td>
                 </tr>
                 <tr>
                   <th>Diameter</th>
@@ -151,10 +151,6 @@ master-slider: yes
                   <th>Weight</th>
                   <td>10.9 lb</td>
                   <td><span class="metric">4.9 kg</span></td>
-                </tr>
-                <tr>
-                  <th>Descaling Head</th>
-                  <td colspan="2">WG 040-DS-R5</td>
                 </tr>
               </tbody>
               </table>
@@ -266,7 +262,7 @@ master-slider: yes
                           <ul>
                             <li>1 x <strong>BJ 048-F</strong> Viscous Fluid, 6oz.</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>GP 025-P2</strong> Hex Socket Plug</li>
+                            <li>1 x <strong>GP 025-P2SS</strong> Hex Socket Plug</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
@@ -325,7 +321,7 @@ master-slider: yes
                             <li>2 x <strong>WG 007</strong> Ball Bearing</li>
                             <li>1 x <strong>WG 008</strong> O-Ring</li>
                             <li>1 x <strong>WG 014</strong> Wave Spring</li>
-                            <li>1 x <strong>WD 021</strong> Seal</li>
+                            <li>1 x <strong>WD 021-S</strong> Seal</li>
                             <li>1 x <strong>WGP 032</strong> Retaining Ring</li>
                           </ul>
                         </div>
@@ -382,6 +378,10 @@ master-slider: yes
       <div class="item">
         <a href="/wgr-magnum"><img class="img-responsive" src="/assets/img/product/thumb-wgr-02.jpg" alt="Warthog WGR Magnum sewer jetting">
         <h5>WGR Magnum</h5></a>
+      </div>
+      <div class="item">
+        <a href="/wgr-magnum-125"><img class="img-responsive" src="/assets/img/product/thumb-wgr-125-02.jpg" alt="WGR Magnum sewer jetting">
+        <h5>WGR-1-1/4 Magnum</h5></a>
       </div>
       <div class="item">
         <a href="/wd"><img class="img-responsive" src="/assets/img/product/thumb-wd-02.jpg" alt="Warthog WD 1-1/4 sewer jetting">
